--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>[Goorm] AI파이썬 기본과정</title>
+		<title>[Goorm] AI_프로젝트 과정</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,12 +19,11 @@
 			<section id="banner">
 				<div class="inner split">
 					<section>
-						<h2>인공지능 기본</h2>
-						<h3 style="color:white">광주 ICT 이노베이션 스퀘어</h3>
+						<h2>프로젝트 과정 </h2>
 						<h4 style="color:white"><a href="#">by Goorm & Daniel_Lim & Students </a></h4>
 					</section>
 					<section>
-						<p> 인공지능(AI) 기본과정 </p>
+						<p> 인공지능(AI) 프로젝트 </p>
 						<ul class="actions">
 							<li><a href="#" class="button special">Get started</a></li>
 						</ul>
@@ -37,10 +36,10 @@
 				<div class="inner split">
 					<section>
 						<h2>인공지능 기본과정</h2>
-						<p>파이썬 기본부터 딥러닝 입문까지 배우는 과정</p>
-						<p>기간 : 2022/07/04 ~ 2022/08/29 </p>
+						<p>파이썬 기본 활용부터 딥러닝 입문 및 실전 응용프로그램까지 배우는 과정</p>
+						<p>기간 : 2022/09/05 ~ 2022/11/04 </p>
 						<ul class="actions">
-							<li><a href="https://ldjwj.github.io/Goorm_2nd_DataCourse/" class="button alt">상세 내용</a></li>
+							<li><a href="https://ldjwj.github.io/Goorm_3rd_DataCourse/" class="button alt">상세 내용</a></li>
 						</ul>
 					</section>
 					<section>
@@ -50,8 +49,8 @@
 							<li>딥러닝 기본 업그레이드</li>
 							<li>실전 데이터 분석</li>
 							<li>머신러닝 기본부터 활용까지</li>
-							<li>팀별 프로젝트 (1) - Paddy Doctor 캐글 대회 참여</li>
-							<li>팀별 프로젝트 (2) - 은행 파산 예측 프로젝트</li>
+							<li>팀별 프로젝트 (1) - 나만의 머신러닝 모델 프로젝트</li>
+							<li>팀별 프로젝트 (2) - 머신러닝/딥러닝 </li>
 							<li>딥러닝 업그레이드(자연어처리, 추천시스템, GAN)</li>
 							<li>딥러닝 응용 프로그래밍</li>
 						</ul>
@@ -67,15 +66,15 @@
 							<img src="images/pic01.jpg" alt="" />
 						</div>
 						<div class="content">
-							<h3>팀별 실전 프로젝트 1- 캐글 대회 딥러닝 대회 참여 - Paddy Doctor</h3>
-							<p> 데이터 이해 및 시각화, 다양한 딥러닝 모델을 사용하여 캐글 대회를 참여하고 데이터 분석을 수행해 본다.</p>
+							<h3>팀별 실전 프로젝트 1- 나만의 머신러닝 시스템 만들기</h3>
+							<p> 데이터 이해 및 시각화, 다양한 머신러닝 모델을 사용하여 모델을 구축하고, 시스템을 구축해 본다.</p>
 							<ul class="actions">
-								<li><a href="https://github.com/LDJWJ/Goorm_2nd_DataCourse/tree/main/01_TeamProject_First_PaddyDoctor" class="button alt">Details</a></li>
+								<li><a href="https://github.com/LDJWJ/Goorm_3rd_DataCourse/tree/main/01_Pilot_Project_First" class="button alt">Details</a></li>
 							</ul>
 						</div>
 					</div>
 					<ul class="actions special">
-						<li><a href="https://github.com/LDJWJ/Goorm_2nd_DataCourse/tree/main/01_TeamProject_First_PaddyDoctor" class="button alt">우리들의 흔적으로 이동(Github)</a></li>
+						<li><a href="https://github.com/LDJWJ/Goorm_3rd_DataCourse/tree/main/01_Pilot_Project_First" class="button alt">우리들의 흔적으로 이동(Github)</a></li>
 					</ul>
 				</div>
 			</section>
@@ -91,12 +90,12 @@
 							<h3>팀별 실전 프로젝트 2- 캐글 머신러닝 대회 참여 & 데이터 분석</h3>
 							<p>데이터를 선정하고, 이에 대한 시각화, 데이터 탐색, 머신러닝 모델을 구축해 봅니다.</p>
 							<ul class="actions">
-								<li><a href="https://github.com/LDJWJ/Goorm_2nd_DataCourse/tree/main/02_TeamProject_Second" class="button alt">Details</a></li>
+								<li><a href="https://github.com/LDJWJ/Goorm_3rd_DataCourse/tree/main/02_TeamProject_Second" class="button alt">Details</a></li>
 							</ul>
 						</div>
 					</div>
 					<ul class="actions special">
-						<li><a href="https://github.com/LDJWJ/Goorm_2nd_DataCourse/tree/main/02_TeamProject_Second" class="button alt">우리들의 흔적으로 이동(Github)</a></li>
+						<li><a href="https://github.com/LDJWJ/Goorm_3rd_DataCourse/tree/main/02_TeamProject_Second" class="button alt">우리들의 흔적으로 이동(Github)</a></li>
 					</ul>
 				</div>
 			</section>
@@ -106,7 +105,7 @@
 				<div class="inner split">
 					<section>
 						<h2>Contact</h2>
-						<p>과정 문의나 인재 관련 문의는 메일로 연락주세요.</p>
+						<p> 채용 문의나 메일로 연락주세요.</p>
 						<form action="#" class="alt" method="POST">
 							<div class="row uniform">
 								<div class="6u 12u$(xsmall)">
