--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 				<div class="inner">
 					<div class="spotlight">
 						<div class="image">
-							<img src="images/pic01.jpg" alt="" />
+							<img src="images/art_unsplash.jpg" alt="" />
 						</div>
 						<div class="content">
-							<h3>팀별 실전 프로젝트 1- 나만의 머신러닝 시스템 만들기</h3>
+							<h3>파일럿 프로젝트 1 - 나만의 데이터 셋 선정 및 데이터 분석</h3>
 							<p> 데이터 이해 및 시각화, 다양한 머신러닝 모델을 사용하여 모델을 구축하고, 시스템을 구축해 본다.</p>
 							<ul class="actions">
 								<li><a href="https://github.com/LDJWJ/Goorm_3rd_DataCourse/tree/main/01_Pilot_Project_First" class="button alt">Details</a></li>
@@ -84,7 +84,7 @@
 				<div class="inner">
 					<div class="spotlight">
 						<div class="image">
-							<img src="images/pic01.jpg" alt="" />
+							<img src="images/art_unsplash_02.jpg" alt="" />
 						</div>
 						<div class="content">
 							<h3>팀별 실전 프로젝트 2- 캐글 머신러닝 대회 참여 & 데이터 분석</h3>
