--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<p>파이썬 기본 활용부터 딥러닝 입문 및 실전 응용프로그램까지 배우는 과정</p>
 						<p>기간 : 2022/09/05 ~ 2022/11/04 </p>
 						<ul class="actions">
-							<li><a href="https://ldjwj.github.io/Goorm_3rd_DataCourse/" class="button alt">상세 내용</a></li>
+							<li><a href="https://github.com/LDJWJ/Goorm_3rd_DataCourse" class="button alt">상세 내용[Github]</a></li>
 						</ul>
 					</section>
 					<section>
